Slight re-org. No reason to have a /work/ subdirectory.

--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -4,9 +4,9 @@ title:          "Playaway"
 tagline:        "All-in-one audiobook player"
 year:           2011
 color:          "#F26222"
-hero-image:     /work/img/work-playaway-hero.jpg
+hero-image:     /img/work-playaway-hero.jpg
 hero-position:  right
-permalink:      /work/playaway/
+permalink:      /playaway/
 ---
 
 Wink started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
