--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -4,9 +4,9 @@ title:          "Wink"
 tagline:        "Video streaming app"
 year:           2015
 color:          "#1CC9DC"
-hero-image:     /work/img/work-wink-hero.jpg
+hero-image:     /img/work-wink-hero.jpg
 hero-position:  right
-permalink:      /work/wink/
+permalink:      /wink/
 ---
 
 Wink started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
