--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -4,9 +4,9 @@ title:          "Squad"
 tagline:        "Social photo status app"
 year:           2016
 color:          "#6852C7"
-hero-image:     /work/img/work-squad-hero.jpg
+hero-image:     /img/work-squad-hero.jpg
 hero-position:  left
-permalink:      /work/squad/
+permalink:      /squad/
 ---
 
 Tackk started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
