Use RGB for more control allowing for RGBA

--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -3,7 +3,7 @@ layout:         project
 title:          "Playaway"
 tagline:        "All-in-one audiobook player"
 year:           2011
-color:          "#F26222"
+color:          "242, 98, 34"
 hero-image:     /img/work-playaway-hero.jpg
 hero-position:  right
 permalink:      /playaway/
