--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -3,7 +3,7 @@ layout:         project
 title:          "Tackk"
 tagline:        "Single-page site creator"
 year:           2013
-color:          "#2D9FE3"
+color:          "45, 159, 227"
 hero-image:     /img/work-tackk-hero.jpg
 hero-position:  lg-left
 permalink:      /tackk/
