--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -3,7 +3,7 @@ layout:         project
 title:          "Wink"
 tagline:        "Video streaming app"
 year:           2015
-color:          "#1CC9DC"
+color:          "28, 201, 220"
 hero-image:     /img/work-wink-hero.jpg
 hero-position:  right
 permalink:      /wink/
