--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -3,7 +3,7 @@ layout:         project
 title:          "Squad"
 tagline:        "Social photo status app"
 year:           2016
-color:          "#6852C7"
+color:          "104, 82, 199"
 hero-image:     /img/work-squad-hero.jpg
 hero-position:  left
 permalink:      /squad/
