--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -3,7 +3,7 @@ layout:         project
 title:          "Bytesize"
 tagline:        "Tiny style-controlled iconset"
 year:           2016
-color:          "#4d5772"
+color:          "77, 87, 114"
 hero-image:     /img/work-bytesize-hero.jpg
 hero-position:  left
 permalink:      /bytesize-icons/
