--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -4,8 +4,7 @@ title:          "Playaway"
 tagline:        "All-in-one audiobook player"
 year:           2011
 color:          "242, 98, 34"
-hero-image:     /img/work-playaway-hero.jpg
-hero-position:  right
+cover-image:    /img/work/playaway-cover.jpg
 permalink:      /playaway/
 ---
 
