--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -4,8 +4,7 @@ title:          "Tackk"
 tagline:        "Single-page site creator"
 year:           2013
 color:          "45, 159, 227"
-hero-image:     /img/work-tackk-hero.jpg
-hero-position:  lg-left
+cover-image:    /img/work/tackk-cover.jpg
 permalink:      /tackk/
 ---
 
