--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -4,8 +4,7 @@ title:          "Wink"
 tagline:        "Video streaming app"
 year:           2015
 color:          "28, 201, 220"
-hero-image:     /img/work-wink-hero.jpg
-hero-position:  right
+cover-image:     /img/work/wink-cover.jpg
 permalink:      /wink/
 ---
 
