--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -4,8 +4,7 @@ title:          "Squad"
 tagline:        "Social photo status app"
 year:           2016
 color:          "104, 82, 199"
-hero-image:     /img/work-squad-hero.jpg
-hero-position:  left
+cover-image:    /img/work/squad-cover.jpg
 permalink:      /squad/
 ---
 
