--- a/articles/_posts/2016-07-11-testing.md
+++ b/articles/_posts/2016-07-11-testing.md
@@ -1,9 +1,12 @@
 ---
 layout:         post
-title:          "Testing one two three!"
+title:          "Testing This Thing..."
+subtitle:       "Houston do you read?"
 date:           2016-07-11
 author:         Dan Klammer
-permalink:      /articles/testing-one-two-three/
+color:          "40, 43, 49"
+cover-image:    /img/articles/2016-07-11-testing/testing-cover.jpg
+permalink:      /articles/testing/
 ---
 
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
