--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -4,8 +4,7 @@ title:          "Bytesize"
 tagline:        "Tiny style-controlled iconset"
 year:           2016
 color:          "77, 87, 114"
-hero-image:     /img/work-bytesize-hero.jpg
-hero-position:  left
+cover-image:    /img/work/bytesize-cover.jpg
 permalink:      /bytesize-icons/
 ---
 
