Re-org of images

--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -4,7 +4,7 @@ title:          "Tackk"
 tagline:        "Single-page site creator"
 year:           2013
 color:          "45, 159, 227"
-cover-image:    /img/work/tackk-cover.jpg
+cover-image:    /img/work/tackk/tackk-cover.jpg
 permalink:      /tackk/
 ---
 
