--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -4,7 +4,7 @@ title:          "Wink"
 tagline:        "Video streaming app"
 year:           2015
 color:          "28, 201, 220"
-cover-image:     /img/work/wink-cover.jpg
+cover-image:     /img/work/wink/wink-cover.jpg
 permalink:      /wink/
 ---
 
