Added fullbleed class for sm breakpoint. Made life easier with an article side margin variable.

--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -10,7 +10,7 @@ permalink:      /squad/
 
 Tackk started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
 
-<div class="full-width bg-gray br3"><iframe class="center-block" src="https://player.vimeo.com/video/145917914?title=0&byline=0&portrait=0&color=6852C7" width="320" height="569" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+<div class="full-width bg-gray br3 sm-fullbleed"><iframe class="center-block" src="https://player.vimeo.com/video/145917914?title=0&byline=0&portrait=0&color=6852C7" width="320" height="569" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 
 Nam a elit sollicitudin, luctus augue quis, egestas diam. In placerat tempor scelerisque. Proin eros sapien, euismod in maximus et, ullamcorper at enim. Curabitur quis metus scelerisque, ultricies ipsum ut, vulputate urna.
 
