Squad Post complete

--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -8,12 +8,52 @@ cover-image:    /img/work/squad/squad-cover.jpg
 permalink:      /squad/
 ---
 
-Tackk started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
+Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [Android](https://play.google.com/store/apps/details?id=com.tackk.squad) app I helped design while at [Tackk](/tackk). The core idea of the app was to get everyone of your Squad (or close group of friends) to post a *current status* within a certain time period. It is all about getting to know what everyone is up to within that moment.
 
-<div class="full-width bg-gray br3 sm-fullbleed"><iframe class="center-block" src="https://player.vimeo.com/video/145917914?title=0&byline=0&portrait=0&color=6852C7" width="320" height="569" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+Squad has become very popular with teens. Within 6 months of launching, Squad has been downloaded over 400 thousand times and has had over 2 million status updates posted.
 
-Nam a elit sollicitudin, luctus augue quis, egestas diam. In placerat tempor scelerisque. Proin eros sapien, euismod in maximus et, ullamcorper at enim. Curabitur quis metus scelerisque, ultricies ipsum ut, vulputate urna.
+My role in the project was creating the logo, brand, wireframes, prototypes, and marketing materials.
 
-Donec egestas arcu volutpat lectus mollis finibus. Sed id imperdiet nunc. Phasellus nisl odio, volutpat in augue vitae, sollicitudin lobortis dui. Etiam dignissim dui sed orci molestie, vel blandit tellus fringilla.
 
-Nulla placerat ultrices velit vitae convallis. Donec hendrerit velit quis erat bibendum viverra. Nam id turpis ac augue scelerisque volutpat. Nunc nec quam nulla. Quisque posuere mi sollicitudin, malesuada purus non, volutpat neque.
+---
+
+
+### **Logo**
+
+![Squad Website](/img/work/squad/squad-logo.jpg)
+
+
+---
+
+
+### **Website**
+
+![Squad Website](/img/work/squad/squad-website.jpg)
+
+*Designed &amp; developed the website (CSS/HTML): [GetSquad.us](https://getsquad.us/)*
+
+
+---
+
+
+### **App Store Preview Video**
+
+<div class="full-width my3 bg-gray br3 sm-fullbleed"><iframe class="center-block" src="https://player.vimeo.com/video/145917914?title=0&byline=0&portrait=0&color=6852C7" width="320" height="569" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+
+*30-second [App Store](https://itunes.apple.com/app/apple-store/id1043626975) video showcasing and demoing the app*
+
+
+---
+
+### **App Design and UX Exploration**
+
+<div class="full-width my3"><iframe class="center-block width-full" src="https://marvelapp.com/6cabb0?emb=1" width="452" height="901" allowTransparency="true" frameborder="0" style="max-height: 100vh"></iframe></div>
+
+*Early UX prototype of the app before it was built*
+
+---
+
+### **Social Posts and Ads**
+
+<div class="center-block my3" style="max-width: 500px"><blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Over 1 million status updates! Thanks for being a part of the Squad! <a href="https://t.co/z5biYyuquV">pic.twitter.com/z5biYyuquV</a></p>&mdash; Squad (@Squad) <a href="https://twitter.com/Squad/status/698185245808586755">February 12, 2016</a></blockquote></div>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
