Updated Squad  copy

--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -8,7 +8,7 @@ cover-image:    /img/work/squad/squad-cover.jpg
 permalink:      /squad/
 ---
 
-Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [Android](https://play.google.com/store/apps/details?id=com.tackk.squad) app I helped design while at [Tackk](/tackk). The core idea of the app was to get everyone of your Squad (or close group of friends) to post a *current status* within a certain time period. It is all about getting to know what everyone is up to within that moment.
+Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [Android](https://play.google.com/store/apps/details?id=com.tackk.squad) app I helped design while at [Tackk](/tackk). The core function of the app is to give you live on-demand status updates from your closest groups of friends, one-hour at a time.
 
 Squad has become very popular with teens. Within 6 months of launching, Squad has been downloaded over 400 thousand times and has had over 2 million status updates posted.
 
