Change these project pages structure. Will swap out imagery soon.

--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -15,45 +15,13 @@ Squad has become very popular with teens. Within 6 months of launching, Squad ha
 My role in the project was creating the logo, brand, wireframes, prototypes, and marketing materials.
 
 
----
+<div class="project-gallery mt6">
+    <div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
+ --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
+ --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
+ --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
+ --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
+ --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div>
+</div>
 
 
-### **Logo**
-
-![Squad Website](/img/work/squad/squad-logo.jpg)
-
-
----
-
-
-### **Website**
-
-![Squad Website](/img/work/squad/squad-website.jpg)
-
-*Designed &amp; developed the website (CSS/HTML): [GetSquad.us](https://getsquad.us/)*
-
-
----
-
-
-### **App Store Preview Video**
-
-<div class="full-width my3 bg-gray br3 sm-fullbleed"><iframe class="center-block" src="https://player.vimeo.com/video/145917914?title=0&byline=0&portrait=0&color=6852C7" width="320" height="569" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-
-*30-second [App Store](https://itunes.apple.com/app/apple-store/id1043626975) video showcasing and demoing the app*
-
-
----
-
-### **App Design and UX Exploration**
-
-<div class="full-width my3"><iframe class="center-block width-full" src="https://marvelapp.com/6cabb0?emb=1" width="452" height="901" allowTransparency="true" frameborder="0" style="max-height: 100vh"></iframe></div>
-
-*Early UX prototype of the app before it was built*
-
----
-
-### **Social Posts and Ads**
-
-<div class="center-block my3" style="max-width: 500px"><blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Over 1 million status updates! Thanks for being a part of the Squad! <a href="https://t.co/z5biYyuquV">pic.twitter.com/z5biYyuquV</a></p>&mdash; Squad (@Squad) <a href="https://twitter.com/Squad/status/698185245808586755">February 12, 2016</a></blockquote></div>
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
