Added PhotoSwipe.js for showcasing work. Squad page is getting very close

--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -15,13 +15,52 @@ Squad has become very popular with teens. Within 6 months of launching, Squad ha
 My role in the project was creating the logo, brand, wireframes, prototypes, and marketing materials.
 
 
-<div class="project-gallery mt6">
-    <div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
- --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
- --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
- --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
- --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div><!--
- --><div class="project-item lg-width-33 sm-width-50 inline-block"><img src="/img/work/squad/squad-website.jpg" /></div>
+<div class="project-gallery mt6" itemscope itemtype="http://schema.org/ImageGallery">
+
+<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/squad/squad-logo.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/squad/squad-logo-sm.jpg" class="width-full" itemprop="thumbnail" alt="Squad Logo" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Logo</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/squad/squad-website.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/squad/squad-website-sm.jpg" class="width-full" itemprop="thumbnail" alt="Squad Website" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Website Design + HTML/CSS</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/squad/squad-appicon.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/squad/squad-appicon-sm.jpg" class="width-full" itemprop="thumbnail" alt="Squad App Icon" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">App Icon</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/squad/squad-android.jpg" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/squad/squad-android-sm.jpg" class="width-full" itemprop="thumbnail" alt="Squad for Android" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">Squad for Android</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/squad/squad-onemillion.gif" data-size="2000x1600" itemprop="contentUrl">
+      <img src="/img/work/squad/squad-onemillion-sm.gif" class="width-full" itemprop="thumbnail" alt="1 Million Status Updates" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">1 Million Status Updates</figcaption>                              
+</figure>{% comment %}
+
+{% endcomment %}<figure class="project-item lg-width-33 sm-width-50 inline-block" citemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+  <a href="/img/work/squad/squad-video.mp4" data-size="2000x1600" data-type="video" data-video='<div class="inline-block-middle"><video width="320" src="/img/work/squad/squad-video.mp4" poster="/img/work/squad/squad-video-poster.jpg" controls style="height: 84vh; max-width: 100%; width: auto;"></video></div>' itemprop="contentUrl">
+      <img src="/img/work/squad/squad-video-sm.jpg" class="width-full" itemprop="thumbnail" alt="App Store Video" />
+  </a>
+  <figcaption class="project-item-caption align-middle p2" itemprop="caption description">App Store Video</figcaption>
+</figure>                              
+
+
 </div>
+
 
 
