--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -10,9 +10,9 @@ permalink:      /squad/
 
 Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [Android](https://play.google.com/store/apps/details?id=com.tackk.squad) app I helped design while at [Tackk](/tackk). The core function of the app is to give you live on-demand status updates from your closest groups of friends, one-hour at a time.
 
-Squad has become very popular with teens. Within 6 months of launching, Squad has been downloaded over 400 thousand times and has had over 2 million status updates posted.
+Squad has become very popular with teens. Within 6 months of launching, Squad has been downloaded over 400k times and has had over 2 million status updates posted.
 
-My role in the project was creating the logo, brand, wireframes, prototypes, and marketing materials.
+My role in the project was creating the logo, brand, wireframes, prototypes, website, and marketing materials.
 
 
 <div class="project-gallery mt6" itemscope itemtype="http://schema.org/ImageGallery">
