Added my role to each project

--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -3,6 +3,7 @@ layout:         project
 title:          "Playaway"
 tagline:        "All-in-one audiobook player"
 year:           2011
+role:           Sr. Web Designer
 color:          "242, 98, 34"
 cover-image:    /img/work/playaway/playaway-cover.jpg
 permalink:      /playaway/
