--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -3,6 +3,7 @@ layout:         project
 title:          "Tackk"
 tagline:        "Single-page site creator"
 year:           2013
+role:           Co-Founder
 color:          "45, 159, 227"
 cover-image:    /img/work/tackk/tackk-cover.jpg
 permalink:      /tackk/
