--- a/work/_posts/2014-01-01-tackkapp.md
+++ b/work/_posts/2014-01-01-tackkapp.md
@@ -3,6 +3,7 @@ layout:         project
 title:          "Tackk App"
 tagline:        "Create pages on the go"
 year:           2014
+role:           Co-Founder
 color:          "195, 54, 111"
 cover-image:    /img/work/tackkapp/tackkapp-cover.jpg
 permalink:      /tackk-app/
