--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -3,6 +3,7 @@ layout:         project
 title:          "Wink"
 tagline:        "Video streaming app"
 year:           2015
+role:           Creative Director
 color:          "28, 201, 220"
 cover-image:     /img/work/wink/wink-cover.jpg
 permalink:      /wink/
