--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -3,6 +3,7 @@ layout:         project
 title:          "Bytesize"
 tagline:        "Tiny style-controlled iconset"
 year:           2016
+role:           Creator
 color:          "77, 87, 114"
 cover-image:    /img/work/bytesize/bytesize-cover.jpg
 permalink:      /bytesize-icons/
