--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -5,7 +5,9 @@ tagline:        "Video streaming app"
 year:           2015
 role:           Creative Director
 color:          "28, 201, 220"
-cover-image:     /img/work/wink/wink-cover.jpg
+cover-image:    /img/work/wink/wink-cover.jpg
+hero-image:     /img/work/wink/wink-hero.jpg
+hero-repeat:    no-repeat
 permalink:      /wink/
 ---
 
