Hero images FTW!

--- a/work/_posts/2014-01-01-tackkapp.md
+++ b/work/_posts/2014-01-01-tackkapp.md
@@ -6,6 +6,9 @@ year:           2014
 role:           Co-Founder
 color:          "195, 54, 111"
 cover-image:    /img/work/tackkapp/tackkapp-cover.jpg
+hero-image:     /img/work/tackkapp/tackkapp-cover.jpg
+hero-position:  center bottom
+hero-repeat:    no-repeat
 permalink:      /tackk-app/
 ---
 
