--- a/work/_posts/2013-01-01-tackk.md
+++ b/work/_posts/2013-01-01-tackk.md
@@ -6,6 +6,10 @@ year:           2013
 role:           Co-Founder
 color:          "45, 159, 227"
 cover-image:    /img/work/tackk/tackk-cover.jpg
+hero-image:     /img/work/tackk/tackk-hero.jpg
+hero-position:  70% bottom
+hero-repeat:    no-repeat
+hero-maxwidth:  1210px
 permalink:      /tackk/
 ---
 
