Updated imagery, kids

--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -6,6 +6,10 @@ year:           2011
 role:           Sr. Web Designer
 color:          "242, 98, 34"
 cover-image:    /img/work/playaway/playaway-cover.jpg
+hero-image:     /img/work/playaway/playaway-hero.jpg
+hero-position:  left bottom
+hero-repeat:    no-repeat
+hero-maxwidth:  800px
 permalink:      /playaway/
 ---
 
