--- a/articles/_posts/2014-06-16-halo-md.md
+++ b/articles/_posts/2014-06-16-halo-md.md
@@ -13,7 +13,7 @@ HaloMD (Mini Demo) is a free and legal download that extends the life of Halo (f
 
 ### **Download the Goods**
 
-![Halo MD gameplay](/img/articles/2014-06-16-halo-md/halo-screenshot.jpg){:id: .img-zoom }
+![Halo MD gameplay](/img/articles/2014-06-16-halo-md/halo-screenshot.jpg){:id: .zoomable }
 
 
 Go to [HaloMD.net] to download the game, and if you have a 360 controller grab the [TattieBogle Xbox360Controller] drivers to allow you to use it. Make sure you use the “Controller” profile when mapping your buttons. You can configure your buttons exactly how they should be set by using this [Microsoft Support page] as a guide.
@@ -21,7 +21,7 @@ Go to [HaloMD.net] to download the game, and if you have a 360 controller grab t
 
 ### **Tweaking your Controller Settings**
 
-![Controller Settings](/img/articles/2014-06-16-halo-md/halo-xbox-360.png){:id: .img-zoom }
+![Controller Settings](/img/articles/2014-06-16-halo-md/halo-xbox-360.png){:id: .zoomable }
 
 
 I also recommend setting your Xbox 360 Controller joystick settings to have a slight threshold. For some reason my controller’s joysticks are a little *shifty*, so I set about a 20% 'give' on both sticks. You can get to these settings by going to * / System Preferences / Xbox 360 Controllers*.
@@ -29,7 +29,7 @@ I also recommend setting your Xbox 360 Controller joystick settings to have a sl
 
 ### **Connect to a Server and Game on!**
 
-![Halo MD servers](/img/articles/2014-06-16-halo-md/halo-servers.png){:id: .img-zoom }
+![Halo MD servers](/img/articles/2014-06-16-halo-md/halo-servers.png){:id: .zoomable }
 
 
   [HaloMD.net]: http://www.halomd.net/
