Linky to website

--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -16,7 +16,7 @@ Squad is an [iOS](https://itunes.apple.com/app/apple-store/id1043626975) and [An
 
 Squad has become very popular with teens. Within 6 months of launching, Squad has been downloaded over 400k times and has had over 2 million status updates posted.
 
-My role in the project was creating the logo, brand, wireframes, prototypes, website, and marketing materials.
+My role in the project was creating the logo, brand, wireframes, prototypes, [website](https://getsquad.us), and marketing materials.
 
 
 <div class="project-gallery mt6" itemscope itemtype="http://schema.org/ImageGallery">
