--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -1,7 +1,7 @@
 ---
 layout:         project
 title:          "Bytesize"
-tagline:        "Tiny style-controlled iconset"
+tagline:        "Tiny style-controlled SVG iconset"
 year:           2016
 role:           Creator
 color:          "77, 87, 114"
@@ -12,10 +12,429 @@ hero-repeat:    repeat-x
 permalink:      /bytesize-icons/
 ---
 
-Tackk started out as the thought... Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, mauris non lobortis tristique, metus urna ultricies metus, et varius eros lorem quis augue. Aenean convallis vitae turpis tincidunt cursus.
+All 75+ icons measure in at 9KB minified (2KB in SVGZ). Each icon is hand-coded along a 32x32 grid and uses stroke to allow for maximum style flexibility. Since these icons are using strictly `stroke`, you can adjust the weight (or width), color, size, and if you want the bevel to be round or square. Pretty rad, huh.
 
-Nam a elit sollicitudin, luctus augue quis, egestas diam. In placerat tempor scelerisque. Proin eros sapien, euismod in maximus et, ullamcorper at enim. Curabitur quis metus scelerisque, ultricies ipsum ut, vulputate urna.
+While designing and coding these icons, I tried to place as few points as possible to keep the shapes simple but also to reduce on file size.
 
-Donec egestas arcu volutpat lectus mollis finibus. Sed id imperdiet nunc. Phasellus nisl odio, volutpat in augue vitae, sollicitudin lobortis dui. Etiam dignissim dui sed orci molestie, vel blandit tellus fringilla.
+Since the code for each icon is so little, placing them directly in your HTML is ideal for speed and management of your code, along with the ability to manipulate each icon since it's in the DOM.
 
-Nulla placerat ultrices velit vitae convallis. Donec hendrerit velit quis erat bibendum viverra. Nam id turpis ac augue scelerisque volutpat. Nunc nec quam nulla. Quisque posuere mi sollicitudin, malesuada purus non, volutpat neque.
+### **Give it a spin**
+
+
+<div class="center-block p2 align-center">
+
+    <style id="icon-styles">
+
+        .icons {
+            stroke-linecap: butt;
+            stroke-linejoin: miter;
+            stroke-width: 5%;
+            color: #4D5772;
+        }
+
+        .bs-icon {
+            display: inline-block;
+            fill: none;
+            margin: 3%;
+            width: 5rem;
+            stroke: currentColor;
+            stroke-width: inherit;
+            stroke-linecap: inherit;
+            stroke-linejoin: inherit;
+            transition: all 0.25s ease;
+            overflow: visible;
+        }
+
+        #icons.round {
+            stroke-linecap: round;
+            stroke-linejoin: round;
+        }
+
+        #icons[data-size="2"] .bs-icon { width: 2rem} 
+        #icons[data-size="3"] .bs-icon { width: 3rem} 
+        #icons[data-size="4"] .bs-icon { width: 4rem} 
+        #icons[data-size="5"] .bs-icon { width: 5rem} 
+        #icons[data-size="6"] .bs-icon { width: 6rem} 
+        #icons[data-size="7"] .bs-icon { width: 7rem} 
+        #icons[data-size="8"] .bs-icon { width: 8rem} 
+
+        .icon-controller {
+            max-width: 36rem;
+        }
+
+        .icon-controller input[type=range] {
+            width: 100%;
+        }
+
+    </style>
+
+    <script>
+
+        function changeSize(newVal){
+            var icons = document.getElementById("icons");
+            icons.setAttribute("data-size", newVal);
+        }
+
+        function changeStroke(newVal){
+            var icons = document.getElementById("icons");
+            icons.style.strokeWidth = newVal + '%';
+        }
+
+        function changeColor(newVal){
+            var icons = document.getElementById("icons");
+            icons.style.color = newVal;
+        }
+
+        function changeStyleRound(){
+            var icons = document.getElementById("icons");
+            icons.classList.toggle("round");
+        }
+
+    </script>
+
+    <form class="icon-controller center-block align-left">
+        Size:
+        <input type="range" name="points" min="2" max="8" oninput="changeSize(this.value)" onchange="changeSize(this.value)"><br>
+        Weight (stroke-width):
+        <input type="range" name="points" min="2" max="8" oninput="changeStroke(this.value)" onchange="changeStroke(this.value)"><br>
+        Color:
+        <input type="color" value="#4D5772" oninput="changeColor(this.value)" onchange="changeColor(this.value)"><br>
+        <label><input type="checkbox" oninput="changeStyleRound()" onchange="changeStyleRound()"> Round</label>
+    </form>
+
+
+    <div id="icons">
+
+    <svg id="i-search" class="bs-icon" viewBox="0 0 32 32">
+        <circle cx="14" cy="14" r="12" />
+        <path d="M23 23 L30 30"  />
+    </svg>
+
+    <svg id="i-close" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M2 30 L30 2 M30 30 L2 2" />
+    </svg>
+
+    <svg id="i-play" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M10 2 L10 30 24 16 Z" />
+    </svg>
+
+    <svg id="i-pause" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M23 2 L23 30 M9 2 L9 30" />
+    </svg>
+
+    <svg id="i-backwards" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M16 2 L2 16 16 30 16 16 30 30 30 2 16 16 Z" />
+    </svg>
+
+    <svg id="i-forwards" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M16 2 L30 16 16 30 16 16 2 30 2 2 16 16 Z" /> 
+    </svg>
+
+    <svg id="i-star" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M16 2 L20 12 30 12 22 19 25 30 16 23 7 30 10 19 2 12 12 12 Z" />
+    </svg>
+
+    <svg id="i-checkmark" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M2 20 L12 28 30 4" />
+    </svg>
+
+    <svg id="i-chevron-top" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M30 20 L16 8 2 20" />
+    </svg>
+
+    <svg id="i-chevron-right" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M12 30 L24 16 12 2" />
+    </svg>
+
+    <svg id="i-chevron-bottom" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M30 12 L16 24 2 12" />
+    </svg>
+
+    <svg id="i-chevron-left" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M20 30 L8 16 20 2" />
+    </svg>
+
+    <svg id="i-arrow-top" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M6 10 L16 2 26 10 M16 2 L16 30" />
+    </svg>
+
+    <svg id="i-arrow-right" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M22 6 L30 16 22 26 M30 16 L2 16" />
+    </svg>
+
+    <svg id="i-arrow-bottom" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M6 22 L16 30 26 22 M16 30 L16 2" />
+    </svg>
+
+    <svg id="i-arrow-left" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M10 6 L2 16 10 26 M2 16 L30 16" />
+    </svg>
+
+    <svg id="i-caret-top" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M30 22 L16 6 2 22 Z" />
+    </svg>
+
+    <svg id="i-caret-right" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M10 30 L26 16 10 2 Z" />
+    </svg>
+
+    <svg id="i-caret-bottom" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M30 10 L16 26 2 10 Z" />
+    </svg>
+
+    <svg id="i-caret-left" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M22 30 L6 16 22 2 Z" />
+    </svg>
+
+    <svg id="i-start" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M8 2 L8 16 22 2 22 30 8 16 8 30" />
+    </svg>
+
+    <svg id="i-end" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M24 2 L24 16 10 2 10 30 24 16 24 30" />
+    </svg>
+
+    <svg id="i-eject" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M30 18 L16 5 2 18 Z M30 18 M2 25 L30 25" />
+    </svg>
+
+    <svg id="i-mute" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M20 16 C20 8 15 2 15 2 L8 10 2 10 2 22 8 22 15 30 C15 30 20 24 20 16 Z" />
+    </svg>
+
+    <svg id="i-volume" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M20 16 C20 8 15 2 15 2 L8 10 2 10 2 22 8 22 15 30 C15 30 20 24 20 16 Z M21 2 C21 2 25 6 25 16 25 26 21 30 21 30 M27 4 C27 4 30 8 30 16 30 24 27 28 27 28" />
+    </svg>
+
+    <svg id="i-ban" class="bs-icon" viewBox="0 0 32 32">
+        <circle cx="16" cy="16" r="14" />
+        <path d="M6 6 L26 26" />
+    </svg>
+
+    <svg id="i-flag" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M6 2 L6 30 M6 6 L26 6 20 12 26 18 6 18" />
+    </svg>
+
+    <svg id="i-options" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M28 6 L4 6 M28 16 L4 16 M28 26 L4 26 M24 3 L24 9 M8 13 L8 19 M20 23 L20 29" />
+    </svg>
+
+    <svg id="i-settings" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M13 2 L13 6 11 7 8 4 4 8 7 11 6 13 2 13 2 19 6 19 7 21 4 24 8 28 11 25 13 26 13 30 19 30 19 26 21 25 24 28 28 24 25 21 26 19 30 19 30 13 26 13 25 11 28 8 24 4 21 7 19 6 19 2 Z" />
+        <circle cx="16" cy="16" r="4" />
+    </svg>
+
+    <svg id="i-heart" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M4 16 C1 12 2 6 7 4 12 2 15 6 16 8 17 6 21 2 26 4 31 6 31 12 28 16 25 20 16 28 16 28 16 28 7 20 4 16 Z" />
+    </svg>
+
+    <svg id="i-clock" class="bs-icon" viewBox="0 0 32 32">
+        <circle cx="16" cy="16" r="14" />
+        <path d="M16 8 L16 16 20 20" />
+    </svg>
+
+    <svg id="i-menu" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M4 8 L28 8 M4 16 L28 16 M4 24 L28 24" />
+    </svg>
+
+    <svg id="i-msg" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M2 4 L30 4 30 22 16 22 8 29 8 22 2 22 Z" />
+    </svg>
+
+    <svg id="i-photo" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M20 24 L12 16 2 26 2 2 30 2 30 24 M16 20 L22 14 30 22 30 30 2 30 2 24" />
+        <circle cx="10" cy="9" r="3" />
+    </svg>
+
+    <svg id="i-camera" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M2 8 L 9 8 12 4 20 4 23 8 30 8 30 26 2 26 Z" />
+        <circle cx="16" cy="16" r="5" />
+    </svg>
+
+    <svg id="i-video" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M22 13 L30 8 30 24 22 19 Z M2 8 L2 24 22 24 22 8 Z" />
+    </svg>
+
+    <svg id="i-music" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M11 25 L11 6 24 3 24 23 M11 13 L24 10" />
+        <ellipse cx="7" cy="25" rx="4" ry="5" />
+        <ellipse cx="20" cy="23" rx="4" ry="5" />
+    </svg>
+
+    <svg id="i-mail" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M2 26 L30 26 30 6 2 6 Z M2 6 L16 16 30 6" />
+    </svg>
+
+    <svg id="i-home" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M12 20 L12 30 4 30 4 12 16 2 28 12 28 30 20 30 20 20 Z" />
+    </svg>
+
+    <svg id="i-user" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M22 11 C22 16 19 20 16 20 13 20 10 16 10 11 10 6 12 3 16 3 20 3 22 6 22 11 Z M4 30 L28 30 C28 21 22 20 16 20 10 20 4 21 4 30 Z" />
+    </svg>
+
+    <svg id="i-trash" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M28 6 L6 6 8 30 24 30 26 6 4 6 M16 12 L16 24 M21 12 L20 24 M11 12 L12 24 M12 6 L13 2 19 2 20 6" />
+    </svg>
+
+    <svg id="i-paperclip" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9" />
+    </svg>
+
+    <svg id="i-file" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M6 2 L6 30 26 30 26 10 18 2 Z M18 2 L18 10 26 10" />
+    </svg>
+
+    <svg id="i-folder" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M2 26 L30 26 30 7 14 7 10 4 2 4 Z M30 12 L2 12" />
+    </svg>
+
+    <svg id="i-folder-open" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M4 28 L28 28 30 12 14 12 10 8 2 8 Z M28 12 L28 4 4 4 4 8" />
+    </svg>
+
+    <svg id="i-work" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M30 8 L2 8 2 26 30 26 Z M20 8 C20 8 20 4 16 4 12 4 12 8 12 8 M8 26 L8 8 M24 26 L24 8" />
+    </svg>
+
+    <svg id="i-work2" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M29 17 L29 28 3 28 3 17 M2 8 L30 8 30 16 C30 16 24 20 16 20 8 20 2 16 2 16 L2 8 Z M16 22 L16 18 M20 8 C20 8 20 4 16 4 12 4 12 8 12 8" />
+    </svg>
+
+    <svg id="i-eye" class="bs-icon" viewBox="0 0 32 32">
+        <circle cx="17" cy="15" r="1" />
+        <circle cx="16" cy="16" r="6" />
+        <path d="M2 16 C2 16 7 6 16 6 25 6 30 16 30 16 30 16 25 26 16 26 7 26 2 16 2 16 Z" />
+    </svg>
+
+    <svg id="i-bookmark" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M6 2 L26 2 26 30 16 20 6 30 Z" />
+    </svg>
+
+    <svg id="i-tag" class="bs-icon" viewBox="0 0 32 32">
+        <circle cx="24" cy="8" r="2" />
+        <path d="M2 18 L18 2 30 2 30 14 14 30 Z" />
+    </svg>
+
+    <svg id="i-lightning" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M18 13 L26 2 8 13 14 19 6 30 24 19 Z" />
+    </svg>
+
+    <svg id="i-activity" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M5 16 L11 16 14 29 18 3 21 16 28 16" />
+    </svg>
+
+    <svg id="i-fire" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M15 30 C0 30 15 13 12 3 28 13 32 30 15 30 Z M17 30 C10 30 17 20 17 20 17 20 24 30 17 30 Z" />
+    </svg>
+
+    <svg id="i-location" class="bs-icon" viewBox="0 0 32 32">
+        <circle cx="16" cy="11" r="4" />
+        <path d="M24 15 C21 22 16 30 16 30 16 30 11 22 8 15 5 8 10 2 16 2 22 2 27 8 24 15 Z" />
+    </svg>
+
+    <svg id="i-export" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M28 22 L28 30 4 30 4 22 M16 4 L16 24 M8 12 L16 4 24 12" />
+    </svg>
+
+    <svg id="i-import" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M28 22 L28 30 4 30 4 22 M16 4 L16 24 M8 16 L16 24 24 16" />
+    </svg>
+
+    <svg id="i-inbox" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M2 15 L2 25 30 25 30 15 26 7 6 7 Z M2 15 L10 15 C10 15 11 20 16 20 21 20 22 15 22 15 L30 15" />
+    </svg>
+
+    <svg id="i-archive" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M4 10 L4 28 28 28 28 10 M2 4 L2 10 30 10 30 4 Z M12 15 L20 15" />
+    </svg>
+
+    <svg id="i-reply" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M10 6 L3 14 10 22 M3 14 L18 14 C26 14 30 18 30 26" />
+    </svg>
+
+    <svg id="i-edit" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z" />
+    </svg>
+
+    <svg id="i-compose" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M27 15 L27 30 2 30 2 5 17 5 M30 6 L26 2 9 19 7 25 13 23 Z M22 6 L26 10 Z M9 19 L13 23 Z" />
+    </svg>
+
+    <svg id="i-upload" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M9 22 C0 23 1 12 9 13 6 2 23 2 22 10 32 7 32 23 23 22 M11 18 L16 14 21 18 M16 14 L16 29" />
+    </svg>
+
+    <svg id="i-download" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M9 22 C0 23 1 12 9 13 6 2 23 2 22 10 32 7 32 23 23 22 M11 26 L16 30 21 26 M16 16 L16 30" />
+    </svg>
+
+    <svg id="i-link" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M18 8 C18 8 24 2 27 5 30 8 29 12 24 16 19 20 16 21 14 17 M14 24 C14 24 8 30 5 27 2 24 3 20 8 16 13 12 16 11 18 15" />
+    </svg>
+
+    <svg id="i-code" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M10 9 L3 17 10 25 M22 9 L29 17 22 25 M18 7 L14 27" />
+    </svg>
+
+    <svg id="i-lock" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23" />
+        <circle cx="16" cy="24" r="1" />
+    </svg>
+
+    <svg id="i-unlock" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 7 9 3 16 3 23 3 23 8 23 9 M16 20 L16 23" />
+        <circle cx="16" cy="24" r="1" />
+    </svg>
+
+    <svg id="i-bell" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M8 17 C8 12 9 6 16 6 23 6 24 12 24 17 24 22 27 25 27 25 L5 25 C5 25 8 22 8 17 Z M20 25 C20 25 20 29 16 29 12 29 12 25 12 25 M16 3 L16 6" />
+    </svg>
+
+    <svg id="i-alert" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M16 3 L30 29 2 29 Z M16 11 L16 19 M16 23 L16 25" />
+    </svg>
+
+    <svg id="i-info" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M16 14 L16 23 M16 8 L16 10" />
+        <circle cx="16" cy="16" r="14" />
+    </svg>
+
+    <svg id="i-creditcard" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M2 7 L2 25 30 25 30 7 Z M5 18 L9 18 M5 21 L11 21" />
+        <path d="M2 11 L2 13 30 13 30 11 Z" fill="currentColor" />
+    </svg>
+
+    <svg id="i-cart" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M6 6 L30 6 27 19 9 19 M27 23 L10 23 5 2 2 2" />
+        <circle cx="25" cy="27" r="2" />
+        <circle cx="12" cy="27" r="2" />
+    </svg>
+
+    <svg id="i-gift" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M4 14 L4 30 28 30 28 14 M2 9 L2 14 30 14 30 9 2 9 Z M16 9 C 16 9 14 0 8 3 2 6 16 9 16 9 16 9 18 0 24 3 30 6 16 9 16 9" />
+    </svg>
+
+    <svg id="i-external" class="bs-icon" viewBox="0 0 32 32">
+        <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18" />
+    </svg>
+
+    <svg id="i-ellipsis-horizontal" class="bs-icon" viewBox="0 0 32 32">
+        <circle cx="7" cy="16" r="2" />
+        <circle cx="16" cy="16" r="2" />
+        <circle cx="25" cy="16" r="2" />
+    </svg>
+
+    <svg id="i-ellipsis-vertical" class="bs-icon" viewBox="0 0 32 32">
+        <circle cx="16" cy="7" r="2" />
+        <circle cx="16" cy="16" r="2" />
+        <circle cx="16" cy="25" r="2" />
+    </svg>
+
+    <svg id="i-twitter" class="bs-icon" viewBox="0 0 64 64">
+        <path stroke-width="0" fill="currentColor" d="M60 16 L54 17 L58 12 L51 14 C42 4 28 15 32 24 C16 24 8 12 8 12 C8 12 2 21 12 28 L6 26 C6 32 10 36 17 38 L10 38 C14 46 21 46 21 46 C21 46 15 51 4 51 C37 67 57 37 54 21 Z" />
+    </svg>
+
+    </div>
+
+</div>
