--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -12,7 +12,7 @@ hero-repeat:    repeat-x
 permalink:      /bytesize-icons/
 ---
 
-All 75+ icons measure in at 9KB minified (2KB in SVGZ). Each icon is hand-coded along a 32x32 grid and uses stroke to allow for maximum style flexibility. Since these icons are using strictly `stroke`, you can adjust the weight (or width), color, size, and if you want the bevel to be round or square. Pretty rad, huh.
+All 75+ icons measure in at 9KB minified (2KB in SVGZ). Each icon is hand-coded along a 32x32 grid and uses stroke to allow for maximum style flexibility. Since these icons are using strictly `stroke`, you can adjust the weight (stroke-width), color, size, and if you want the bevel to be round or square. Pretty rad, huh.
 
 While designing and coding these icons, I tried to place as few points as possible to keep the shapes simple but also to reduce on file size.
 
@@ -35,13 +35,13 @@ Since the code for each icon is so little, placing them directly in your HTML is
         .bs-icon {
             display: inline-block;
             fill: none;
-            margin: 3%;
-            width: 5rem;
+            margin: 0.25em;
+            font-size: 1em;
+            width: 1em;
             stroke: currentColor;
             stroke-width: inherit;
             stroke-linecap: inherit;
             stroke-linejoin: inherit;
-            transition: all 0.25s ease;
             overflow: visible;
         }
 
@@ -49,14 +49,6 @@ Since the code for each icon is so little, placing them directly in your HTML is
             stroke-linecap: round;
             stroke-linejoin: round;
         }
-
-        #icons[data-size="2"] .bs-icon { width: 2rem} 
-        #icons[data-size="3"] .bs-icon { width: 3rem} 
-        #icons[data-size="4"] .bs-icon { width: 4rem} 
-        #icons[data-size="5"] .bs-icon { width: 5rem} 
-        #icons[data-size="6"] .bs-icon { width: 6rem} 
-        #icons[data-size="7"] .bs-icon { width: 7rem} 
-        #icons[data-size="8"] .bs-icon { width: 8rem} 
 
         .icon-controller {
             max-width: 36rem;
@@ -72,7 +64,7 @@ Since the code for each icon is so little, placing them directly in your HTML is
 
         function changeSize(newVal){
             var icons = document.getElementById("icons");
-            icons.setAttribute("data-size", newVal);
+            icons.style.fontSize = newVal + 'em';
         }
 
         function changeStroke(newVal){
@@ -94,16 +86,16 @@ Since the code for each icon is so little, placing them directly in your HTML is
 
     <form class="icon-controller center-block align-left">
         Size:
-        <input type="range" name="points" min="2" max="8" oninput="changeSize(this.value)" onchange="changeSize(this.value)"><br>
+        <input type="range" name="points" min="2" max="6" step="0.01" oninput="changeSize(this.value)" onchange="changeSize(this.value)" ><br>
         Weight (stroke-width):
-        <input type="range" name="points" min="2" max="8" oninput="changeStroke(this.value)" onchange="changeStroke(this.value)"><br>
+        <input type="range" name="points" min="2" max="8" step="0.01" value="5" oninput="changeStroke(this.value)" onchange="changeStroke(this.value)"><br>
         Color:
         <input type="color" value="#4D5772" oninput="changeColor(this.value)" onchange="changeColor(this.value)"><br>
-        <label><input type="checkbox" oninput="changeStyleRound()" onchange="changeStyleRound()"> Round</label>
+        <label><input type="checkbox" checked oninput="changeStyleRound()" onchange="changeStyleRound()"> Round</label>
     </form>
 
 
-    <div id="icons">
+    <div id="icons" class="p3 round center-block align-left" style="font-size: 4em; max-width: 56rem">
 
     <svg id="i-search" class="bs-icon" viewBox="0 0 32 32">
         <circle cx="14" cy="14" r="12" />
