Correct default size

--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -95,7 +95,7 @@ Since the code for each icon is so little, placing them directly in your HTML is
     </form>
 
 
-    <div id="icons" class="p3 round center-block align-left" style="font-size: 4em; max-width: 56rem">
+    <div id="icons" class="p3 round center-block align-left" style="font-size: 4em; stroke-width: 5%; max-width: 56rem">
 
     <svg id="i-search" class="bs-icon" viewBox="0 0 32 32">
         <circle cx="14" cy="14" r="12" />
