--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -29,7 +29,7 @@ Since the code for each icon is so little, placing them directly in your HTML is
             stroke-linecap: butt;
             stroke-linejoin: miter;
             stroke-width: 5%;
-            color: #4D5772;
+            color: #3498db;
         }
 
         .bs-icon {
@@ -54,7 +54,7 @@ Since the code for each icon is so little, placing them directly in your HTML is
             max-width: 36rem;
         }
 
-        .icon-controller input[type=range] {
+        input[type=range] {
             width: 100%;
         }
 
@@ -84,19 +84,24 @@ Since the code for each icon is so little, placing them directly in your HTML is
 
     </script>
 
-    <form class="icon-controller center-block align-left">
+    <form class="icon-controller center-block align-left font-size-5 line-height-none box-shadow-light p4 br3" style="background: #f8f8f8;">
+        
         Size:
-        <input type="range" name="points" min="2" max="6" step="0.01" oninput="changeSize(this.value)" onchange="changeSize(this.value)" ><br>
+        <input type="range" min="2" max="6" step="0.01" value="3.5" oninput="changeSize(this.value)" onchange="changeSize(this.value)" class="mt1 mb3">
+        
         Weight (stroke-width):
-        <input type="range" name="points" min="2" max="8" step="0.01" value="5" oninput="changeStroke(this.value)" onchange="changeStroke(this.value)"><br>
+        <input type="range" min="2" max="8" step="0.01" value="5" oninput="changeStroke(this.value)" onchange="changeStroke(this.value)" class="mt1 mb3">
+        
+        <label class="block mt1 mb3"><input type="checkbox" checked oninput="changeStyleRound()" onchange="changeStyleRound()"> Round</label>
+
         Color:
-        <input type="color" value="#4D5772" oninput="changeColor(this.value)" onchange="changeColor(this.value)"><br>
-        <label><input type="checkbox" checked oninput="changeStyleRound()" onchange="changeStyleRound()"> Round</label>
+        <input type="color" value="#4d5772" oninput="changeColor(this.value)" onchange="changeColor(this.value)" class="mt1 block w8 h5 br2">
+
     </form>
 
 
-    <div id="icons" class="p3 round center-block align-left" style="font-size: 4em; stroke-width: 5%; max-width: 56rem">
-
+    <div id="icons" class="pt5 px3 round center-block color-page" style="font-size: 3.5em; stroke-width: 5%; max-width: 50rem">
+ 
     <svg id="i-search" class="bs-icon" viewBox="0 0 32 32">
         <circle cx="14" cy="14" r="12" />
         <path d="M23 23 L30 30"  />
