Show example icon

--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -16,6 +16,22 @@ All 75+ icons measure in at 9KB minified (2KB in SVGZ). Each icon is hand-coded 
 
 While designing and coding these icons, I tried to place as few points as possible to keep the shapes simple but also to reduce on file size.
 
+<div class="align-center p2">
+    <svg viewBox="0 0 32 32" width="128" height="128" fill="none">
+      <path stroke="SlateGray" stroke-width="4%" stroke-linejoin="round"
+        d="M2 4 L30 4 30 22 16 22 8 29 8 22 2 22 Z" />
+    </svg>
+</div>
+
+
+{% highlight html %}
+<svg viewBox="0 0 32 32" width="128" height="128" fill="none">
+  <path stroke="SlateGray" stroke-width="4%" stroke-linejoin="round"
+    d="M2 4 L30 4 30 22 16 22 8 29 8 22 2 22 Z" />
+</svg>
+{% endhighlight %}
+
+
 Since the code for each icon is so little, placing them directly in your HTML is ideal for speed and management of your code, along with the ability to manipulate each icon since it's in the DOM.
 
 ### **Give it a spin**
@@ -84,7 +100,7 @@ Since the code for each icon is so little, placing them directly in your HTML is
 
     </script>
 
-    <form class="icon-controller center-block align-left font-size-5 line-height-none box-shadow-light p4 br3" style="background: #f8f8f8;">
+    <form class="icon-controller center-block align-left font-size-5 line-height-none box-shadow-light p4 br3" style="background: #f8f9fb;">
         
         Size:
         <input type="range" min="2" max="6" step="0.01" value="3.5" oninput="changeSize(this.value)" onchange="changeSize(this.value)" class="mt1 mb3">
@@ -434,4 +450,11 @@ Since the code for each icon is so little, placing them directly in your HTML is
 
     </div>
 
+</div>
+
+
+<div class="py4 align-center">
+    <a href="https://github.com/danklammer/bytesize-icons" class="btn dim underline-none text-shadow-light box-shadow-light px3 py2 br6 pressable">
+        Checkout the project on GitHub
+    </a>
 </div>
