--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -37,7 +37,7 @@ Since the code for each icon is so little, placing them directly in your HTML is
 ### **Give it a spin**
 
 
-<div class="center-block p2 align-center">
+<div class="center-block py2 align-center">
 
     <style id="icon-styles">
 
@@ -51,7 +51,7 @@ Since the code for each icon is so little, placing them directly in your HTML is
         .bs-icon {
             display: inline-block;
             fill: none;
-            margin: 0.25em;
+            margin: 0.2em;
             font-size: 1em;
             width: 1em;
             stroke: currentColor;
@@ -116,7 +116,7 @@ Since the code for each icon is so little, placing them directly in your HTML is
     </form>
 
 
-    <div id="icons" class="pt5 px3 round center-block color-page" style="font-size: 3.5em; stroke-width: 5%; max-width: 50rem">
+    <div id="icons" class="pt5 round center-block color-page" style="font-size: 3.5em; stroke-width: 5%; max-width: 50rem">
  
     <svg id="i-search" class="bs-icon" viewBox="0 0 32 32">
         <circle cx="14" cy="14" r="12" />
