--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -12,7 +12,7 @@ hero-repeat:    repeat-x
 permalink:      /bytesize-icons/
 ---
 
-All 75+ icons measure in at 9KB minified (2KB in SVGZ). Each icon is hand-coded along a 32x32 grid and uses stroke to allow for maximum style flexibility. Since these icons are using strictly `stroke`, you can adjust the weight (stroke-width), color, size, and if you want the bevel to be round or square. Pretty rad, huh.
+All 75+ icons measure in at 9KB minified (2KB in SVGZ). Each icon is hand-coded along a 32x32 grid and uses stroke to allow for maximum style flexibility. Since these icons are using strictly `stroke`, you can adjust the weight (stroke-width), color, size, and if you want the bevel to be round or square.
 
 While designing and coding these icons, I tried to place as few points as possible to keep the shapes simple but also to reduce on file size.
 
