--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -32,7 +32,7 @@ While designing and coding these icons, I tried to place as few points as possib
 {% endhighlight %}
 
 
-Dropping these icons directly in your HTML gives you the ability to manipulate the icon properties since everything is accessible through the DOM. While you do miss out the advantage of caching when linking to a remote file, you do shave off a request. And in this case, the filesize is so small a direct embed is the way to go.
+Dropping these icons directly in your HTML gives you the ability to manipulate the icon properties since everything is accessible through the DOM. While you do miss out on the advantage of caching when linking to a remote file, you do shave off a request. And in this case, the filesize is so small a direct embed is the way to go.
 
 ### **Give it a spin**
 
