No border on sm sizes

--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -100,7 +100,7 @@ Dropping these icons directly in your HTML gives you the ability to manipulate t
 
     </script>
 
-    <form class="icon-controller center-block align-left font-size-5 line-height-none box-shadow-light p4 br3" style="background: #f8f9fb;">
+    <form class="icon-controller center-block align-left font-size-5 line-height-none box-shadow-light p4 br3 sm-br0" style="background: #f8f9fb;">
         
         Size:
         <input type="range" min="2" max="6" step="0.01" value="3.5" oninput="changeSize(this.value)" onchange="changeSize(this.value)" class="mt1 mb3">
@@ -452,9 +452,10 @@ Dropping these icons directly in your HTML gives you the ability to manipulate t
 
 </div>
 
-
 <div class="py4 align-center">
     <a href="https://github.com/danklammer/bytesize-icons" class="btn dim underline-none text-shadow-light box-shadow-light px3 py2 br6 pressable">
         Checkout the project on GitHub
     </a>
 </div>
+
+
