Re-org and cleanup (particularly includes)

--- a/articles/_posts/2014-06-16-halo-md.md
+++ b/articles/_posts/2014-06-16-halo-md.md
@@ -35,3 +35,6 @@ I also recommend setting your Xbox 360 Controller joystick settings to have a sl
   [HaloMD.net]: http://www.halomd.net/
   [TattieBogle Xbox360Controller]: http://tattiebogle.net/index.php/ProjectRoot/Xbox360Controller/OsxDriver
   [Microsoft Support page]: http://support.microsoft.com/kb/909385
+
+
+{% include modules/plugin-zoomable.html %}
