--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -66,5 +66,6 @@ My role in the project was creating the logo, brand, wireframes, prototypes, [we
 
 </div>
 
+{% include modules/plugin-photoswipe.html %}
 
 
