Split Bytesize project page into an article. WIP

--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -12,36 +12,16 @@ hero-repeat:    repeat-x
 permalink:      /bytesize-icons/
 ---
 
-All 75+ icons measure in at 9KB minified (2KB in SVGZ). Each icon is hand-coded along a 32x32 grid and uses stroke to allow for maximum style flexibility. Since these icons are using strictly `stroke`, you can adjust the weight (stroke-width), color, size, and if you want the edges to be round or square.
+Bytesize is a micro line iconset I created to help learn the [SVG spec](https://www.w3.org/TR/SVG/), particularly [SVG Paths](https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths) and how they are drawn within code.
 
-While designing and coding these icons, I tried to place as few points as possible to keep the shapes simple but also to reduce on file size.
+Each icon is hand-coded along a 32x32 grid, and uses SVG `stroke` allowing for maximum style flexibility; meaning you can adjust the weight, color, size, and if you want the edges to be round or square.
 
-<div class="align-center p2">
-    <svg viewBox="0 0 32 32" width="128" height="128" fill="none">
-      <path stroke="SlateGray" stroke-width="4%" stroke-linejoin="round"
-        d="M2 4 L30 4 30 22 16 22 8 29 8 22 2 22 Z" />
-    </svg>
-</div>
+While designing and coding these icons, I tried to place as few points as possible to keep the shapes simple but also to reduce on file size. All 75+ icons measure in at 9KB minified (2KB in SVGZ, or Gzipped).
 
-
-{% highlight html %}
-<svg viewBox="0 0 32 32" width="128" height="128" fill="none">
-  <path stroke="SlateGray" stroke-width="4%" stroke-linejoin="round"
-    d="M2 4 L30 4 30 22 16 22 8 29 8 22 2 22 Z" />
-</svg>
-{% endhighlight %}
-
-
-Dropping these icons directly in your HTML gives you the ability to manipulate the icon properties since everything is accessible through the DOM. While you do miss out on the advantage of caching when linking to a remote file, you do shave off a request. And in this case, the filesize is so small a direct embed is the way to go.
-
-### **Give it a spin**
-
-{% include modules/bytesize-demo.html %}
+Check out a demo of Bytesize and what I learned while creating them in my post, [SVG Icons FTW](/articles/svg-icons-ftw). Also free free to use any of these icons on your next project. Everything is available on the [Bytesize GitHub page](https://github.com/danklammer/bytesize-icons)!
 
 <div class="py4 align-center">
     <a href="https://github.com/danklammer/bytesize-icons" class="btn dim underline-none text-shadow-light box-shadow-light px3 py2 br6 pressable">
-        Checkout the project on GitHub
+        Bytesize on GitHub
     </a>
 </div>
-
-
