--- a/articles/_posts/2016-07-11-testing.md
+++ b/articles/_posts/2016-07-11-testing.md
@@ -5,7 +5,7 @@ subtitle:       "Houston do you read?"
 date:           2016-07-11
 author:         Dan Klammer
 color:          "40, 43, 49"
-cover-image:    /img/articles/2016-07-11-testing/testing-cover.jpg
+hero-image:     /img/articles/2016-07-11-testing/testing-hero.jpg
 permalink:      /articles/testing/
 ---
 
