Use more consistent subtitle instead of tagline

--- a/work/_posts/2011-01-01-playaway.md
+++ b/work/_posts/2011-01-01-playaway.md
@@ -1,7 +1,7 @@
 ---
 layout:         project
 title:          "Playaway"
-tagline:        "All-in-one audiobook player"
+subtitle:       "All-in-one audiobook player"
 year:           2011
 role:           Sr. Web Designer
 color:          "242, 98, 34"
