--- a/work/_posts/2014-01-01-tackkapp.md
+++ b/work/_posts/2014-01-01-tackkapp.md
@@ -1,7 +1,7 @@
 ---
 layout:         project
 title:          "Tackk App"
-tagline:        "Create pages on the go"
+subtitle:       "Create pages on the go"
 year:           2014
 role:           Co-Founder
 color:          "195, 54, 111"
