--- a/work/_posts/2015-01-01-wink.md
+++ b/work/_posts/2015-01-01-wink.md
@@ -1,7 +1,7 @@
 ---
 layout:         project
 title:          "Wink"
-tagline:        "Video streaming app"
+subtitle:       "Video streaming app"
 year:           2015
 role:           Creative Director
 color:          "28, 201, 220"
