--- a/work/_posts/2016-01-01-squad.md
+++ b/work/_posts/2016-01-01-squad.md
@@ -1,7 +1,7 @@
 ---
 layout:         project
 title:          "Squad"
-tagline:        "Social photo status app"
+subtitle:       "Social photo status app"
 year:           2016
 role:           Creative Director
 color:          "104, 82, 199"
