--- a/work/_posts/2016-06-01-bytesize.md
+++ b/work/_posts/2016-06-01-bytesize.md
@@ -1,7 +1,7 @@
 ---
 layout:         project
 title:          "Bytesize"
-tagline:        "Tiny style-controlled SVG iconset"
+subtitle:       "Tiny style-controlled SVG iconset"
 year:           2016
 role:           Creator
 color:          "77, 87, 114"
