--- a/work/_posts/2012-01-01-theringg.md
+++ b/work/_posts/2012-01-01-theringg.md
@@ -1,7 +1,7 @@
 ---
 layout:         project
 title:          "The Ringg"
-tagline:        "Instant engagement site creator"
+subtitle:       "Instant engagement site creator"
 year:           2012
 role:           Co-Founder
 color:          "72, 194, 212"
